<resources>
    <string name="app_name">TOKO ONLINE</string>
    <string name="name_product">Blender Super Mini Lengkap</string>
    <string name="content_text">Blender atau pelumat adalah alat elektronik berupa sebuah wadah dilengkapi pisau berputar yang digunakan untuk mengaduk, mencampur, menggiling, atau melunakkan bahan makanan. Pisau berbentuk seperti sebuah baling-baling pendek yang dipasang pada bagian bawah wadah.</string>
    <string name="content_specs_spesifikasi">- 6 Mata Pisau Stainless Steel 304\n
- Portable dan Rechargeable \n
- Gelas bermaterial PCTG\n
- Kecepatan Putaran 21.000 RPM \n
- Kapasitas Baterai 1200mAh \n
- Safety Sensor \n
- Dimensi 20cm x 8cm \n
- Berat 450 Gram</string>
    <string name="content_specs_kelengkapan">- Blender Machine 1 Pcs \n
- Gelas 1 Pcs \n
- Drinking Lid + Strap 1 Pcs \n
- Micro USB Cable 1 Pcs</string>
    <string name="content_specs_membersihkan">- Isi gelas dengan air bersih \n
- Pasang blender machine \n
- Nyalakan blender selama 15 detik \n
- Matikan blender dan buang air \n
- Lakukan langkah diatas bila gelas masih kotor</string>
    <string name="stock">Stock hanya 5 pcs</string>
    <string name="keterangan_produk">Keterangan Produk</string>
    <string name="spesifikasi_produk">Spesifikasi Produk</string>
    <string name="kelengkapan_produk">Kelengkapan Produk</string>
    <string name="cara_membersihkan">Cara Membersihkan</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Rijal Kurniawan</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$120</string>
    <string name="dummy_photos">1 photos</string>
    <string name="pembelian">Blender Super Mini Lengkap \nBerhasil dibeli</string>
    <string name="detail_harga">Harga : $120</string>
    <string name="detail_ongkir">Ongkir : $10</string>
    <string name="detail_total">Total : $130</string>
    <string name="pemesanan">Pesanan Anda Sedang Diproses!!</string>
</resources>
